2009-05-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Replaced deprecated gtk_entry_set_position() with gtk_editable_set_position()

2009-05-07  Christopher Zimmermann  <madroach@zakweb.de>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-options-dialog.cc:
	Allow gentoo like left-click behaviour

2009-05-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.h:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-notebook.h:
	* src/gnome-cmd-profile-component.h:
	Properly destroy object in delete operator

2009-04-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-profile-component.cc:
	* src/gnome-cmd-profile-component.h:
	advrename profiles: added convert_case() and trim_blanks() methods

2009-04-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-profile-component.cc:
	advrename profiles: set default template string to "$N" in copy()

2009-04-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-profile-component.cc:
	* src/tags/gnome-cmd-profile-component.h:
	advrename profiles: added copy() method

2009-04-22  Andrey Cherkinskiy

	* src/gnome-cmd-user-actions.cc:
	Fixed problem #579633 (accessing administrator privileges with gksudo)

2009-04-15  <nejc@nejc.info>

	* src/gnome-cmd-rename-dialog.cc:
	Toggle path/basename/filename selections for F2 too

2009-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Refresh file icon after renaming

	* src/tags/gnome-cmd-tags.cc:
	Properly report unsuported Doc.* tags

	* src/tags/gnome-cmd-profile-component.cc:
	* src/tags/gnome-cmd-profile-component.h:
	advrename profiles: new widget for editing all profile data

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-rename-dialog.cc:
	* src/gnome-cmd-xfer.cc:
	gcc warnings cleanup

2009-04-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc: